[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/scripts/dialogue_overlay.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/crafting_menu_theme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=1]
resource_name = "go_down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.466517, 2.73208 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.535887, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "pop_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2.73208, 0.466517 ),
"update": 0,
"values": [ Vector2( 0, 48 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2, 0.535887 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="dialogue_overlay" type="Control"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 48.0
margin_bottom = 48.0001
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/go_down = SubResource( 1 )
anims/pop_up = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_top = 96.0
margin_right = 48.0
margin_bottom = 144.0
theme = ExtResource( 2 )

[node name="protagonist" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
expand = true
stretch_mode = 1

[node name="Panel2" type="Panel" parent="."]
margin_left = 56.0
margin_top = 96.0
margin_right = 256.0
margin_bottom = 144.0
theme = ExtResource( 2 )

[node name="dialogue" type="RichTextLabel" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 2 )
[connection signal="timeout" from="Timer" to="." method="pop_character"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
